--- a/style.css
+++ b/style.css
@@ -189,6 +189,51 @@ article {
   font-size: 150%;
 }
 
+.point1 {
+  animation: point1 2s infinite;
+}
+
+@keyframes point1 {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.point2 {
+  animation: point2 2s infinite;
+}
+
+@keyframes point2 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.point3 {
+  animation: point3 2s infinite;
+}
+
+@keyframes point3 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /*--------------------Bandeau bas--------------------
 -------------------------------------------------------
 -------------------------------------------------------
